# agent-fleet

./: .env.example  .gitignore  CLIENT_USAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  README_ROUTER.md  ROUTER_QUICK_REFERENCE.md  SETUP_COMPLETE.md  TEST_AGENTS_README.md  architecture.md  chat_with_router.py  langgraph.json  main.py  prompts.yaml  pyproject.toml  simple_test.py  test_a2a.py  test_a2a_sdk.py  test_client.py  test_client_sdk.py  test_mcp_endpoint.py  test_router_complete.py  test_router_local.py  test_router_simple.py  test_router_streaming.py  test_router_with_subordinates.py  verify_server.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: A2A_PROTOCOL.md  MCP_INTEGRATION.md  PLANNING.md  STREAMING.md  router-agent.dsl  router-agent.md
src/agents/: __init__.py  cards.py  environment_provisioner.py  github_provisioner.py  jenkins_provisioner.py  quick_agent.py  router_agent.py  slow_agent.py  task_breakdown.py  task_breakdown_a2a.py
src/llm/: factory.py
src/models/: a2a_state.py  environment_state.py  github_state.py  jenkins_state.py  router_interface.py  router_state.py  state.py
src/nodes/: __init__.py  aggregate.py  analyze.py  approval.py  execute.py  plan.py  reject.py  transform.py  validate.py
src/utils/: __init__.py  discovery.py  graph_factory.py  prompt_manager.py  transform.py
tests/: __init__.py  conftest.py
tests/integration/: test_router_graph.py
tests/unit/: test_router_nodes.py
