[project]
name = "agent-fleet"
version = "0.1.0"
description = "LangGraph agent for breaking down complex tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.0.3",
    "langchain-openai>=1.0.2",
    "langchain-anthropic>=1.0.1",
    "langgraph>=1.0.2",
    "langgraph-cli>=0.4.7",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
    "a2a-sdk>=0.3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "langgraph-api==0.5.4",
]
